# flemi-api

./: .flake8  .gitignore  .pdm.toml  .pre-commit-config.yaml  README.md  data-dev.sqlite3  pyproject.toml  wsgi.py
.github/workflows/: test.yml
flemi/: __init__.py  fakes.py  models.py  settings.py  utils.py
flemi/api/auth/: schemas.py  views.py
flemi/api/group/: schemas.py  views.py
flemi/api/me/: schemas.py  views.py
flemi/api/post/: schemas.py
flemi/api/user/: schemas.py  views.py
flemi/commands/: __init__.py  user.py
flemi/templates/: confirm.html  confirm.txt
flog/: __init__.py  commands.py  emails.py  extensions.py  fakes.py  models.py  settings.py  shop_items.py  utils.py  wsgi.py
flog/api_v4/: __init__.py  decorators.py  schemas.py
flog/api_v4/auth/: views.py
flog/api_v4/authentication/: __init__.py  schemas.py  views.py
flog/api_v4/me/: __init__.py  schemas.py  views.py
flog/api_v4/post/: schemas.py  views.py
flog/api_v4/user/: schemas.py  views.py
flog/commands/: __init__.py  auth.py  cli.py  user.py
flog/templates/: confirm.html  confirm.txt
migrations/: env.py
migrations/versions/: 00fdded8fed4_enable_user_address.py  dc9d5c6bed53_password_update.py
tests/: base.py  test_auth.py  test_group.py  test_me.py  test_post.py
