[project]
name = "flog-api-v4"
version = ""
description = ""
authors = [
    {name = "rice0208", email = "riceforever0208@outlook.com"},
    {name = "andyzhou", email = "andyforever0108@outlook.com"},
]
dependencies = [
    "apiflask~=1.0.0",
    "flask-sqlalchemy>=2.5.1",
    "flask-migrate>=3.1.0",
    "authlib>=1.0.1",
    "bleach>=5.0.0",
    "faker>=13.3.5",
    "flask-cors>=3.0.10",
    "rich>=12.2.0",
    "halo>=0.0.31",
    "python-dotenv>=0.20.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "mypy>=0.950",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = " -p no:warnings --cov"
testpaths = ["test"]

[tool.coverage.run]
branch = true
include = ["flog/api_v4/*.py"]
